// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Snapshots Disabled Button should render as expected, without error 1`] = `
<styled.button
  disabled={true}
  kind="primary"
  onClick={[Function]}
  type="button"
>
  Button
</styled.button>
`;

exports[`Button Snapshots Primary Button should render as expected, without error 1`] = `
<styled.button
  disabled={false}
  kind="primary"
  onClick={[Function]}
  type="button"
>
  Button
</styled.button>
`;

exports[`Button Snapshots Secondary Button should render as expected, without error 1`] = `
<styled.button
  disabled={false}
  kind="primary"
  onClick={[Function]}
  type="button"
>
  Button
</styled.button>
`;
